# modbuscxx

./: CMakeLists.txt  README.md  notes.md  programmersnotes.md
exploration/: modbusrtu
include/: modbusRtu.hpp  modbusrtu.hpp
include/modbuscxx/: modbusRtu.hpp
src/: CMakeLists.txt  modbusRtu.cpp
